[gd_scene load_steps=13 format=3 uid="uid://dgbsewj66lght"]

[ext_resource type="Script" path="res://Scripts/Enemies/mr_crab.gd" id="1_5yg3g"]
[ext_resource type="Texture2D" uid="uid://deoru8s57aqgm" path="res://Assets/sprites/enemies/crab-idle/crab-idle-1.png" id="1_tph87"]
[ext_resource type="Texture2D" uid="uid://cnmv60uvhq0al" path="res://Assets/sprites/enemies/crab-idle/crab-idle-2.png" id="2_l7qo5"]
[ext_resource type="Texture2D" uid="uid://berjlulxvrrg7" path="res://Assets/sprites/enemies/crab-idle/crab-idle-3.png" id="3_qc4ve"]
[ext_resource type="Texture2D" uid="uid://cilv5gctrbiin" path="res://Assets/sprites/enemies/crab-idle/crab-idle-4.png" id="4_12ncp"]
[ext_resource type="Texture2D" uid="uid://de08pb5dhg5n1" path="res://Assets/sprites/enemies/crab-walk/crab-walk-1.png" id="5_eon3v"]
[ext_resource type="Texture2D" uid="uid://b0y3lw2w0ltcq" path="res://Assets/sprites/enemies/crab-walk/crab-walk-2.png" id="6_fxamq"]
[ext_resource type="Texture2D" uid="uid://dcht7ho3w156i" path="res://Assets/sprites/enemies/crab-walk/crab-walk-3.png" id="7_64md1"]
[ext_resource type="Texture2D" uid="uid://djervgx7ph1mt" path="res://Assets/sprites/enemies/crab-walk/crab-walk-4.png" id="8_k7be4"]

[sub_resource type="SpriteFrames" id="SpriteFrames_mub2s"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_tph87")
}, {
"duration": 1.0,
"texture": ExtResource("2_l7qo5")
}, {
"duration": 1.0,
"texture": ExtResource("3_qc4ve")
}, {
"duration": 1.0,
"texture": ExtResource("4_12ncp")
}],
"loop": true,
"name": &"Idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_eon3v")
}, {
"duration": 1.0,
"texture": ExtResource("6_fxamq")
}, {
"duration": 1.0,
"texture": ExtResource("7_64md1")
}, {
"duration": 1.0,
"texture": ExtResource("8_k7be4")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_nqj2v"]
radius = 13.0096

[sub_resource type="CircleShape2D" id="CircleShape2D_me1qo"]
radius = 15.0

[node name="MrCrab" type="CharacterBody2D" groups=["Enemy"]]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_5yg3g")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -16)
sprite_frames = SubResource("SpriteFrames_mub2s")
animation = &"Idle"
autoplay = "Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, -13)
shape = SubResource("CircleShape2D_nqj2v")

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(-1, -13)
target_position = Vector2(0, 21)

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(-1, -13)
target_position = Vector2(21, 0)

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(-1, -13)
target_position = Vector2(-21, 0)

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(-1, -13)
shape = SubResource("CircleShape2D_me1qo")
debug_color = Color(0.774743, 0.419454, 0.37698, 0.42)

[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
